# RayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Camera.hh  Image.hh  Light.hh  MaterialsParameters.h  Object.hh  Ray.hh  Scene.hh  Sphere.hh  Vec3.hh  utils.h
src/: Camera.cpp  Image.cpp  Light.cpp  Ray.cpp  Scene.cpp  Sphere.cpp  Vec3.cpp  utils.cpp
